# python-template

./: .gitignore  LICENSE  README.md  noxfile.py  pyproject.toml
src/python_template/: __init__.py  main.py
tests/: __init__.py  test_console.py
