[tool.poetry]
name = "python-template"
version = "0.1.0"
description = "A Python project template"
authors = ["Liam van der Poel <vanderpoel.liam@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/VanderpoelLiam/python-template"
repository = "https://github.com/VanderpoelLiam/python-template"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"