[tool.poetry]
name = "python-template"
version = "0.1.0"
description = "A Python project template"
authors = ["Liam van der Poel <vanderpoel.liam@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/VanderpoelLiam/python-template"
repository = "https://github.com/VanderpoelLiam/python-template"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
coverage = {extras = ["toml"], version = "^7.1.0"}
Pygments = "^2.14.0"
black = "^22.12.0"
darglint = "^1.8.1"
flake8 = "^6.0.0"
flake8-bandit = "^4.1.1"
flake8-bugbear = "^23.1.20"
flake8-docstrings = "^1.7.0"
isort = "^5.11.4"
pep8-naming = "^0.13.3"
pre-commit = "^3.0.0"
pre-commit-hooks = "^4.4.0"
pyupgrade = "^3.3.1"
xdoctest = {extras = ["colors"], version = "^1.1.0"}

[tool.poetry.scripts]
python-template = "python_template.main:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["python_template", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
